wire authentication modes util, make doc on authentication modes
